--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kasa",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://salimbenfarhat.github.io/oc_da-jr_p11_kasa/",
+  "homepage": "https://salimbenfarhat.github.io/oc_da-jr_p11_kasa",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
